# doi-rs

./: CODE_OF_CONDUCT.md  Cargo.toml  LICENSE  README.md
.github/workflows/: rustdoc.yml
examples/: basic.rs  fake_doi.rs
scripts/: reset_proxy.sh
src/: lib.rs  metadata.rs
