[package]
name = "doi"
description = "Digital Object Identifier (DOI) resolver"
repository = "https://github.com/Teddy-van-Jerry/doi-rs"
authors = ["Teddy van Jerry <me@teddy-van-jerry.org>"]
version = "0.3.0"
readme = "README.md"
license = "MIT"
exclude = [
    "docs/*",
    "examples/*",
    "tests/*",
    "target/*",
    "scripts/*",
    "Cargo.lock",
    ".github/*",
    ".vscode/*",
    ".DS_Store",
]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ureq = "2.10"

[features]
default = ["proxy", "metadata"]
proxy = ["ureq/proxy-from-env"]
socks-proxy = ["ureq/socks-proxy"]
metadata = ["ureq/json"]
